--- a/index.html
+++ b/index.html
@@ -39,15 +39,16 @@
                   </li>
                 </ul>
               </nav>
-            <nav class="flag">
               <a href="" class="flag-cam"><img src="/IMG/flag-cambodia.png" alt="flag-cam"></a>
-            </nav>
         </nav>      
     </header>
     <div class="navbar2">
             <ul class="nav-menu">
               <li class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle">PERSONAL<i class="fa-solid fa-chevron-down"></i></a>
+                <div class="li-flex">
+                  <a href="#" class="nav-link dropdown-toggle">PERSONAL</a>
+                  <i class="fa-solid fa-chevron-down" style="color: white;"></i>
+                </div>
                 <ul class="dropdown-menu">
                   <li><a href="/HTML/Personal/Credits.html">Credits</a></li>
                   <li><a href="/HTML/Personal/Deposits.html">Deposits</a></li>
@@ -60,8 +61,10 @@
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle">BUSINESS</a>
-                <i class="fa-solid fa-chevron-down"></i>
+                <div class="li-flex">
+                  <a href="#" class="nav-link dropdown-toggle">BUSINESS</a>
+                  <i class="fa-solid fa-chevron-down" style="color: white;"></i>
+                </div>
                 <ul class="dropdown-menu">
                   <li><a href="#">Credits</a></li>
                   <li><a href="#">Deposits</a></li>
@@ -74,7 +77,10 @@
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle">CARDS<i class="fa-solid fa-chevron-down"></i></a>
+                <div class="li-flex">
+                  <a href="#" class="nav-link dropdown-toggle">CARDS</a>
+                  <i class="fa-solid fa-chevron-down" style="color: white;"></i>
+                </div>
                 <ul class="dropdown-menu">
                   <li><a href="https://www.acledabank.com.kh/kh/eng/ps_ebconsumercard">Consumer Card</a></li>
                   <li><a href="https://www.acledabank.com.kh/kh/eng/ps_ebacledacard">Acleda Card</a></li>
@@ -86,7 +92,10 @@
                 </ul>
               </li>
               <li class="nav-item dropdown">
-                <a href="#" class="nav-link dropdown-toggle">DIGITAL<i class="fa-solid fa-chevron-down"></i></a>
+                <div class="li-flex" id="none-class">
+                  <a href="#" class="nav-link dropdown-toggle"  >DIGITAL</a>
+                  <i class="fa-solid fa-chevron-down" style="color: white;"></i>
+                </div>
                 <ul class="dropdown-menu">
                   <li><a href="#">ACLEDA Mobile</a></li>
                   <li><a href="#">ACLEDA Internet BanKing</a></li>
@@ -105,7 +114,10 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link"> INVESTOR RELATIONS <i class="fa-solid fa-chevron-down"></i></a>
+                <div class="li-flex" id="none-class">
+                  <a href="#" class="nav-link" > INVESTOR RELATIONS</a>
+                  <i class="fa-solid fa-chevron-down" style="color: white;"></i>
+                </div>
               </li> 
             </ul>
       </div>
@@ -133,40 +145,39 @@
 
     <section class="content-nav">
         <nav>
-            <ul>
+            <ul class="list-under-imageslide">
                 <li>
-                    <a href="#">
-
+                    <a href="#" class="width-under-imageslide">
                         <img src="/Icon/icon-proxtera.png" alt="">
                         <span>PROXTERRA SYSTEM</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" class="width-under-imageslide">
                         <img src="/Icon/icon-offer-white.png" alt="">
                         <span>SPECIAL OFFERS</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" class="width-under-imageslide">
                         <img src="/Icon/icon-news-white.png" alt="">
                         <span>LATEST NEWS</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" class="width-under-imageslide">
                         <img src="/Icon/icon-update-white.png" alt="">
                         <span>PRODUCTS UPDATES</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" class="width-under-imageslide">
                         <img src="/Icon/icon-deposit-white.png" alt="">
                         <span>DEPOSIT</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="#" class="width-under-imageslide">
                         <img src="/Icon/icon-loan-white.png">
                         <span>CREDIT</span>
                     </a>
