--- a/index.html
+++ b/index.html
@@ -145,41 +145,33 @@
 
     <section class="content-nav">
         <nav>
-            <ul class="list-under-imageslide">
-                <li>
-                    <a href="#" class="width-under-imageslide">
+            <ul>
+              <li class="width-under-imageslide">
+                    <a href="#" >
                         <img src="/Icon/icon-proxtera.png" alt="">
-                        <span>PROXTERRA SYSTEM</span>
+                        <span class="width-icon">PROXTERRA SYSTEM</span>
                     </a>
-                </li>
-                <li>
-                    <a href="#" class="width-under-imageslide">
+
+                    <a href="#">
                         <img src="/Icon/icon-offer-white.png" alt="">
-                        <span>SPECIAL OFFERS</span>
+                        <span class="width-icon">SPECIAL OFFERS</span>
                     </a>
-                </li>
-                <li>
-                    <a href="#" class="width-under-imageslide">
+
+                    <a href="#" >
                         <img src="/Icon/icon-news-white.png" alt="">
-                        <span>LATEST NEWS</span>
+                        <span class="width-icon">LATEST NEWS</span>
                     </a>
-                </li>
-                <li>
-                    <a href="#" class="width-under-imageslide">
+                    <a href="#" >
                         <img src="/Icon/icon-update-white.png" alt="">
-                        <span>PRODUCTS UPDATES</span>
+                        <span class="width-icon">PRODUCTS UPDATES</span>
                     </a>
-                </li>
-                <li>
-                    <a href="#" class="width-under-imageslide">
+                    <a href="#" class="width-icon">
                         <img src="/Icon/icon-deposit-white.png" alt="">
-                        <span>DEPOSIT</span>
+                        <span >DEPOSIT</span>
                     </a>
-                </li>
-                <li>
-                    <a href="#" class="width-under-imageslide">
+                    <a href="#" class="width-icon">
                         <img src="/Icon/icon-loan-white.png">
-                        <span>CREDIT</span>
+                        <span >CREDIT</span>
                     </a>
                 </li>
             </ul>
@@ -254,7 +246,7 @@
         </section>
     </div>
     <div class="container">
-              <div class="row">
+              <div class="row scroll-footer">
                 <div class="col-md-3">
                   <img src="/IMG/logo3.png" alt="ACLEDA University">
                   <h3>ACLEDA University of Business Co., Ltd.</h3>
