--- a/HTML/Personal/Credits.html
+++ b/HTML/Personal/Credits.html
@@ -40,9 +40,9 @@
                   <li class="nav-item">
                     <a href="#" class="nav-link"> INTERNET BANKING</a>
                   </li>
-                  <li class="link-list"><a href="" class="flag-cam"><img src="/IMG/flag-cambodia.png" alt="flag-cam"></a></li>
-                </ul>
+                  
               </nav>
+              <a href="" class="flag-cam"><img src="/IMG/flag-cambodia.png" alt="flag-cam"></a>
         </nav>      
     </header>
     <section class="navbar2">
@@ -111,14 +111,14 @@
     </section>
     <section class="img-show">
         <div class="img-show">
-            <img src="/IMG/c1.jpg" class="picture" alt="">
+            <img src="/IMG/c1.jpg"  alt="">
         </div>
     </section>
     <section class="layout-container">
         <!-- Left Component -->
         <div class="credit">
             <!-- Breadcrumb Navigation -->
-            <h1 class="title">CREDITS <i class="fas fa-sort-down"></i></h1>
+            <h1 class="title">CREDITS<i class="fas fa-sort-down"></i></h1>
             <hr class="border">
             <div class="breadcrumb">
                 <a href=""><img class="logoAc" src="/IMG/logo Ace.png" alt=""> &gt;</a>
@@ -302,12 +302,12 @@
         <p>Online Visitor: 367</p>
         <p>©2024 ACLEDA Bank Plc.</p>
       </div>
-      <h2 class="title3"">CONNECT WITH US ON</h2>
+      <h2 class="title3">CONNECT WITH US ON</h2>
       <div class="gridt-footer">
           <img src="/picture/PCIDSS (1).jpg" alt="">
           <img src="/picture/IRQS.jpg" alt="">
       </div>
-      <h2 class="title3"">CONNECT WITH US ON</h2>
+      <h2 class="title3">CONNECT WITH US ON</h2>
       <div class="footer-social">
         <a href="#"><img src="/picture/icon-coolapp.jpg" alt="Facebook"></a>
         <a href="#"><img src="/picture/icon-snapkyu.jpg" alt="Twitter"></a>
