--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <img src="/picture/PCIDSS (1).jpg" alt="">
             <img src="/picture/IRQS.jpg" alt="">
         </div>
-        <h2 class="title"">CONNECT WITH US ON</h2>
+        <h2 class="title">CONNECT WITH US ON</h2>
         <div class="footer-social">
           <a href="#"><img src="/picture/icon-coolapp.jpg" alt="Facebook"></a>
           <a href="#"><img src="/picture/icon-snapkyu.jpg" alt="Twitter"></a>
