--- a/HTML/Personal/Credits.html
+++ b/HTML/Personal/Credits.html
@@ -13,9 +13,11 @@
 <body>
     <header class="navigation">
         <nav class="container-width top-page">
-            <nav class="logo">
-                <img src="/IMG/logo3.png" alt="Logo-Ac">
-            </nav>
+            <a href="/index.html">
+              <nav class="logo">
+                  <img src="/IMG/logo3.png" alt="Logo-Ac">
+              </nav>
+            </a>
             <nav class="navbar">
                 <ul class="nav-menu">
                   <li class="nav-item">
@@ -144,7 +146,7 @@
           <p class="p2">ACLEDA Bank Plc is a reliable source of funds to support your business, help your business growth and make your wish come true. With ACLEDA Bank Plc's
               products and services, it is not only a magnificent way to your business but also your personal life and your whole family.</p>
       </div>
-      <div class="credits-section2">
+      <div class="credits-section2 credits-section">
         <h2 class="credits-title">Notificaton on interest rate</h2>
         <span>November 14, 2023</span>
         <p>We would like to inform customers and the public that in order to support the growth with customers in line with the growth of the national economy and sustainable development, ACLEDA Bank has reduced the interest rate of 0.7% on all new loans in all sectors from now onwards.</p>
