--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <header class="navigation">
         <nav class="container-width top-page">
-            <nav class="logo">
-                <img src="/IMG/logo3.png" alt="Logo-Ac">
-            </nav>
+            <a href="/index.html">
+              <nav class="logo">
+                  <img src="/IMG/logo3.png" alt="Logo-Ac">
+              </nav>
+            </a>
             <nav class="navbar">
                 <ul class="nav-menu">
                   <li class="nav-item">
