--- a/HTML/Personal/Deposits.html
+++ b/HTML/Personal/Deposits.html
@@ -41,9 +41,10 @@
                   <li class="nav-item">
                     <a href="#" class="nav-link"> INTERNET BANKING</a>
                   </li>
-                  <li class="link-list"><a href="" class="flag-cam"><img src="/IMG/flag-cambodia.png" alt="flag-cam"></a></li>
+
                 </ul>
               </nav>
+              <a href="" class="flag-cam"><img src="/IMG/flag-cambodia.png" alt="flag-cam"></a>
         </nav>      
     </header>
     <section class="navbar2">
@@ -112,14 +113,14 @@
     </section>
     <section class="img-show">
         <div class="img-show">
-            <img src="/IMG/banner-deposit.jpg" class="picture" alt="">
+            <img src="/IMG/banner-deposit.jpg" alt="">
         </div>
     </section>
     <section class="layout-container">
         <!-- Left Component -->
         <div class="deposits">
             <!-- Breadcrumb Navigation -->
-            <h1 class="title"> DEPOSITS <i class="fas fa-sort-down"></i></h1>
+            <h1 class="title" id="title"> DEPOSITS <i class="fas fa-sort-down"></i></h1>
             <hr class="border">
             <div class="breadcrumb">
                 <a href=""><img class="logoAc" src="/IMG/logo Ace.png" alt=""> &gt;</a>
