--- a/HTML/Personal/Deposits.html
+++ b/HTML/Personal/Deposits.html
@@ -321,7 +321,7 @@
     
     <footer class="footer_2">
       <div class="footer-navigation">
-        <ul>
+        <ul class="list-nav">
           <li><a href="#">Site Map</a></li>
           <li><a href="#">Form Center</a></li>
           <li><a href="#">User Manual</a></li>
