--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Make the website acelada bank project frontend by group 6 from E2"/>
+    <meta name="keywords" content="HTML, CSS, JavaScript"/>  
+    <meta property="og:title" content="Aceleda Bank Group 6 From E2"/>
+    <meta property="og:image" content="https://thumbs.dreamstime.com/b/e-letter-logo-design-black-background-creative-initials-concept-white-vector-circle-graphic-shape-business-sign-abstract-tech-221105842.jpg"/>
+    <meta property="url" content="https://www.E2ProBank.com"/>
     <title>Acledabank</title>
     <link rel="stylesheet" href="/Style/style.css">
     <script src="https://kit.fontawesome.com/0822a4a647.js" crossorigin="anonymous"></script>
