--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 </ul>
               </nav>
               <a href="" class="flag-cam"><img src="/IMG/flag-cambodia.png" alt="flag-cam"></a>
+              <a href="https://guideline-ac.vercel.app/" class="downapp">Download App</a>
         </nav>      
     </header>
     <div class="navbar2">
